...
    9: '1SA',
    10: '2SA',
    11: '1KI',
    12: '2KI',
    13: '1CH',
    14: '2CH',
    15: 'EZR',
    16: 'NEH',
    17: 'EST',
    18: 'JOB',
    19: 'PSA',
    20: 'PRO',
    21: 'ECC',
...
