...
import 'package:flutter/foundation.dart';
import 'package:flutter/material.dart';
import 'package:flutter/services.dart';

class AppConfig {
  static String instanceId = 'christian_tube';
  static String appName = 'ChristianApp';
  static String applicationId = 'org.rozario.christiantube.mobile';
  static String version = '1.28.0';
  static int versionCode = 45;
  static String apiBaseUrl = 'https://christianapp-zjdh.onrender.com';
  static String webAppUrl = 'https://christianapp.vercel.app';
  static String releasesRepo = 'rozariopersonal/Christian-Tube-Releases';
...
