...
  } catch (_) {}

  return AdaptiveTextSelectionToolbar.buttonItems(
    anchors: selectableRegionState.contextMenuAnchors,
    buttonItems: [
      ContextMenuButtonItem(
        label: 'Highlight',
        onPressed: () {
          selectableRegionState.hideToolbar();
          if (selectedText.isNotEmpty) {
            onHighlight(selectedText, pageNum);
          }
        },
...
